All testcase passing version

--- a/3-week/package.json
+++ b/3-week/package.json
@@ -12,7 +12,8 @@
     "normal": "ts-node normal.ts",
     "all": "ts-node parser.ts && ts-node cfg.ts && ts-node normal.ts",
     "tip-all": "ts-node tip-all-in-one.ts",
-    "tip-type-check": "ts-node tip-type-check.ts"
+    "tip-type-check": "ts-node tip-type-check.ts",
+    "tip-type-test": "./run_tests_detailed.sh"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
